fixed the alignment

--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,14 @@ body {
 .ceoBlock::after {
     content: '';
     border: 1.3px solid white;
-    height: 20px;
+    height: 10px;
     position: absolute;
     right: 50%;
-    bottom: -20px;
+    bottom: -10px;
+}
+
+.overflow-auto {
+    overflow: auto;
 }
 
 
